tests/duarouter/alternatives/style1_input/errors/routealt/routealt_last_empty/errors.duarouter
Error: Attribute 'last' in definition of routeDistribution '1' is empty.
Quitting (on error).
